# ReductionWrappers

./: .Rbuildignore  .travis.yml  404.html  CHANGELOG.html  CHANGELOG.md  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  README.md  authors.html  index.html  pkgdown.yml  pyproject.toml  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: dca.R  dim_reduction_wrapper.R  fasttsne.R  fitsne.R  forceatlas2.R  interfaceFunction.R  multicoreTSNE.R  opentsne.R  optSNE.R  pacmap.R  paga.R  phate.R  phenograph.R  seuratFunctions.R  umap.R  utils_nin.R
data-raw/: DATASET.R
man/: DoDCA.Rd  DoForceAtlas2.Rd  DoMCtSNE.Rd  DoPHATE.Rd  DoPaCMAP.Rd  DoPhenoGraph.Rd  DoUMAP.Rd  DofastTSNE.Rd  DoopenTSNE.Rd  DooptSNE.Rd  GoDCA.Rd  GoMCtSNE.Rd  GoPHATE.Rd  GoPhenoGraph.Rd  GoUMAP.Rd  GofitSNE.Rd  PAGA.Rd  PAGAplot.Rd  PushData.Rd  ReductionBridge.Rd  dca.Rd  dim.from.python.Rd  fa2.Rd  fastTSNE.Rd  fitsne.Rd  multicoreTSNE.Rd  not_in.Rd  openTSNE.Rd  optSNE.Rd  optTSNE.Rd  pacmap.Rd  phate.Rd  phenograph.Rd  python.dim.reduction.bridge.Rd  umap.Rd
reference/: DoForceAtlas2.html  DoPHATE.html  DoPaCMAP.html  DoPhenoGraph.html  DoUMAP.html  DoopenTSNE.html  DooptSNE.html  PAGA.html  PAGAplot.html  PushData.html  ReductionBridge.html  fa2.html  index.html  openTSNE.html  optSNE.html  pacmap.html  phate.html  phenograph.html  pipe.html  umap.html
