[tool.poetry]
name = "reductionwrappers"
version = "2.5.5"
description = "companion Python installer for R package {ReductionWrappers}"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">3.8.3,<3.10"
anndata = ">=0.8.0rc1"
umap-learn = "^0.5.2"
ForceAtlas2 = "^1.0"
opentsne = {git = "https://github.com/pavlin-policar/openTSNE"}
pacmap = "^0.5.0"
PhenoGraph = {git = "https://github.com/milescsmith/PhenoGraph", rev = "1.6.1"}
scanpy = "^1.8"
s2a = {git = "https://github.com/milescsmith/s2a", rev = "eb38ae3aba23bdebffd1f13d1282bfed5d2f64af"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
